k8s/nextcloud/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
        - name: nextcloud-redis
          image: redis
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: nextcloud-redis
          args: ["redis-server", "--requirepass", "$(REDIS_HOST_PASSWORD)"]
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud-redis
  name: nextcloud-redis
  namespace: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 6379
      name: nextcloud-redis
  selector:
    app: nextcloud-redis
