k8s/nextcloud/nextcloud.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: nextcloud
          image: ghcr.io/akashisn/nextcloud
          imagePullPolicy: Always
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /mnt/nextcloud
            - name: static
              mountPath: /mnt/static
            - name: nextcloud-secrets
              mountPath: /secrets
          resources:
            requests:
              cpu: "8"
              memory: 20Gi
            limits:
              cpu: "16"
              memory: 22Gi
        - name: nginx
          image: nginx:mainline
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: nginx-nextcloud
            - containerPort: 8080
              name: nginx-static
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: static
              mountPath: /mnt/static
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/real_ip.conf
              subPath: real_ip.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/nextcloud.conf
              subPath: nextcloud.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/static.conf
              subPath: static.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: nextcloud-secrets
          secret:
            secretName: nextcloud-secrets
        - name: nginx-conf
          configMap:
            name: nginx-conf
  volumeClaimTemplates:
    - metadata:
        name: app
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: static
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-hdd-storage
        resources:
          requests:
            storage: 8Ti
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: nginx-nextcloud
      port: 80
      targetPort: nginx-nextcloud
    - name: nginx-static
      port: 8080
      targetPort: nginx-static
  selector:
    app: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: nextcloud
  annotations:
    nginx.org/redirect-to-https: "True"
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-request-buffering: "off"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.akashisn.info
        - static.akashisn.info
      secretName: letsencrypt-cert
  rules:
    - host: files.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nginx-nextcloud
    - host: static.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nginx-static
